[gd_scene load_steps=6 format=3 uid="uid://b0f0wxndugg6t"]

[ext_resource type="PackedScene" uid="uid://yuga1hcitwp5" path="res://BinaryPuzzle/LogicGates/SimpleLogicGate.tscn" id="1_6ch66"]
[ext_resource type="Script" uid="uid://cbjke0m1b1bkd" path="res://BinaryPuzzle/scripts/GateSelector.gd" id="1_blvsl"]
[ext_resource type="PackedScene" uid="uid://83t38had80mt" path="res://BinaryPuzzle/LogicGates/OrLogicGate.tscn" id="2_01voe"]
[ext_resource type="PackedScene" uid="uid://b2t54pk2eqhhd" path="res://BinaryPuzzle/LogicGates/AndLogicGate.tscn" id="3_blvsl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6m1hl"]
size = Vector2(32, 160)

[node name="GateSelection" type="Node2D"]
script = ExtResource("1_blvsl")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_right = 32.0
offset_bottom = 128.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.306923, 0.306923, 0.306923, 1)

[node name="NotButton" type="Button" parent="ScrollContainer/VBoxContainer/ColorRect"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="SimpleLogicGate" parent="ScrollContainer/VBoxContainer/ColorRect" instance=ExtResource("1_6ch66")]
position = Vector2(16, 16)
script = null

[node name="ColorRect2" type="ColorRect" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.306923, 0.306923, 0.306923, 1)

[node name="OrButton" type="Button" parent="ScrollContainer/VBoxContainer/ColorRect2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="SimpleLogicGate" parent="ScrollContainer/VBoxContainer/ColorRect2" instance=ExtResource("2_01voe")]
position = Vector2(16, 16)
script = null

[node name="ColorRect3" type="ColorRect" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.306923, 0.306923, 0.306923, 1)

[node name="AndButton" type="Button" parent="ScrollContainer/VBoxContainer/ColorRect3"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="SimpleLogicGate" parent="ScrollContainer/VBoxContainer/ColorRect3" instance=ExtResource("3_blvsl")]
position = Vector2(16, 16)
script = null

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 80)
shape = SubResource("RectangleShape2D_6m1hl")
